Include required parameter names when completing a method call.
When a method such as "void m(int i, int j)" is completed, instead of
simply inserting "m()", we insert "m(i, j)", we highlight "i", and we
set up linked position groups for "i" and "j" so that the user can
press tab to move from one parameter to the next.

Optional parameters (both named and positional) are not handled by
this logic--the user must still enter them manually.

R=danrubel@google.com

Review URL: https://codereview.chromium.org//837793003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42667 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -2036,11 +2036,11 @@
               parameterNames field is omitted.
             </p>
           </field>
-          <field name="positionalParameterCount" optional="true">
-            <ref>int</ref>
+          <field name="hasNamedParameters" optional="true">
+            <ref>bool</ref>
             <p>
-              The number of positional parameters for the function or
-              method being suggested. This field is omitted if the
+              True if the function or method being suggested has at
+              least one named parameter. This field is omitted if the
               parameterNames field is omitted.
             </p>
           </field>
