Enable enum and deferred import support
R=scheglov@google.com

Review URL: https://codereview.chromium.org//829133007

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42704 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -1801,6 +1801,7 @@
         <object>
           <field name="enableAsync" optional="true">
             <ref>bool</ref>
+            <p><b><i>Deprecated</i></b>/<p>
             <p>
               True if the client wants to enable support for the
               proposed async feature.
@@ -1808,6 +1809,7 @@
           </field>
           <field name="enableDeferredLoading" optional="true">
             <ref>bool</ref>
+            <p><b><i>Deprecated</i></b>/<p>
             <p>
               True if the client wants to enable support for the
               proposed deferred loading feature.
@@ -1815,6 +1817,7 @@
           </field>
           <field name="enableEnums" optional="true">
             <ref>bool</ref>
+            <p><b><i>Deprecated</i></b>/<p>
             <p>
               True if the client wants to enable support for the
               proposed enum feature.
