Adds LINTs to the server's generated protocol.
R=brianwilkerson@google.com, scheglov@google.com

Review URL: https://codereview.chromium.org//838283002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42711 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -1785,6 +1785,7 @@
           <value><code>CHECKED_MODE_COMPILE_TIME_ERROR</code></value>
           <value><code>COMPILE_TIME_ERROR</code></value>
           <value><code>HINT</code></value>
+          <value><code>LINT</code></value>
           <value><code>POLYMER</code></value>
           <value><code>STATIC_TYPE_WARNING</code></value>
           <value><code>STATIC_WARNING</code></value>
