Change code completion relevance from CompletionRelevance.LOW/DEFAULT/HIGH to int
This allows the sever to return a more graduated relevance
and facilitates moving client side prioritization over to the server.

BUG=
R=brianwilkerson@google.com

Review URL: https://codereview.chromium.org//845553005

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42735 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -1909,17 +1909,6 @@
           completion request.
         </p>
       </type>
-      <type name="CompletionRelevance">
-        <p>
-          An enumeration of the relevance of a completion
-          suggestion.
-        </p>
-        <enum>
-          <value><code>LOW</code></value>
-          <value><code>DEFAULT</code></value>
-          <value><code>HIGH</code></value>
-        </enum>
-      </type>
       <type name="CompletionSuggestion">
         <p>
           A suggestion for how to complete partially entered text. Many
@@ -1934,9 +1923,10 @@
             </p>
           </field>
           <field name="relevance">
-            <ref>CompletionRelevance</ref>
+            <ref>int</ref>
             <p>
-              The relevance of this completion suggestion.
+              The relevance of this completion suggestion
+              where a higher number indicates a higher relevance.
             </p>
           </field>
           <field name="completion">
