Add generateLints analysis option to the Server protocol API.
R=brianwilkerson@google.com, scheglov@google.com

Review URL: https://codereview.chromium.org//806943004

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42745 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -1832,7 +1832,14 @@
           <field name="generateHints" optional="true">
             <ref>bool</ref>
             <p>
-              True is hints should be generated as part of generating
+              True if hints should be generated as part of generating
+              errors and warnings.
+            </p>
+          </field>
+          <field name="generateLints" optional="true">
+            <ref>bool</ref>
+            <p>
+              True if lints should be generated as part of generating
               errors and warnings.
             </p>
           </field>
