Rank most retaining instances for each class.
Keep a heap snapshot (object graph) in the isolate.
On request from a class view, show 10 most retaining instances.

Currently, a new snapshot is fetched every time a ranking is requested.
In the future, we will want more fine-grained management of snapshots,
with its own dedicated view/console.

R=johnmccutchan@google.com

Review URL: https://codereview.chromium.org//818733002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42754 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/observatory/lib/src/elements/class_view.html
+++ b/runtime/observatory/lib/src/elements/class_view.html
@@ -166,7 +166,7 @@
             </div>
           </div>
           <div class="memberItem">
-            <div class="memberName">retained size</div>
+            <div class="memberName">total retained memory size</div>
             <div class="memberValue">
               <template if="{{ retainedBytes == null }}">
                 <eval-link callback="{{ retainedSize }}"
@@ -175,6 +175,21 @@
               </template>
               <template if="{{ retainedBytes != null }}">
                 {{ retainedBytes | formatSize }}
+              </template>
+            </div>
+          </div>
+          <div class="memberItem">
+            <div class="memberName">toplist by retained memory</div>
+            <div class="memberValue">
+              <template if="{{ mostRetained == null }}">
+                <eval-link callback="{{ retainedToplist }}"
+                           label="[find]">
+                </eval-link>
+              </template>
+              <template if="{{ mostRetained != null }}">
+                <template repeat="{{ most in mostRetained }}">
+                  {{ most.retainedSize | formatSize }}<instance-ref ref="{{ most }}"></instance-ref><br>
+                </template>
               </template>
             </div>
           </div>
