--- a/runtime/observatory/lib/src/elements/service_view.html
+++ b/runtime/observatory/lib/src/elements/service_view.html
@@ -3,13 +3,13 @@
 <link rel="import" href="class_view.html">
 <link rel="import" href="code_view.html">
 <link rel="import" href="context_view.html">
+<link rel="import" href="cpu_profile.html">
 <link rel="import" href="error_view.html">
 <link rel="import" href="field_view.html">
 <link rel="import" href="function_view.html">
 <link rel="import" href="heap_map.html">
 <link rel="import" href="heap_profile.html">
 <link rel="import" href="instance_view.html">
-<link rel="import" href="isolate_profile.html">
 <link rel="import" href="library_view.html">
 <link rel="import" href="observatory_element.html">
 <link rel="import" href="script_view.html">
