suggest fields rather than synthetic getters and return dynamic returnType rather than null
BUG=dartbug.com/21679
R=paulberry@google.com

Review URL: https://codereview.chromium.org//791553007

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@42786 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -2006,8 +2006,9 @@
           <field name="returnType" optional="true">
             <ref>String</ref>
             <p>
-              The return type of the getter, function or method being
-              suggested. This field is omitted if the suggested element
+              The return type of the getter, function or method
+              or the type of the field being suggested.
+              This field is omitted if the suggested element
               is not a getter, function or method.
             </p>
           </field>
