Library Dependencies Analysis service API.
R=brianwilkerson@google.com, scheglov@google.com

Review URL: https://codereview.chromium.org//861893003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43077 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -359,6 +359,21 @@
           </field>
         </result>
       </request>
+      <request method="getLibraryDependencies">
+            <p>
+              Return a list of all of the libraries referenced by any files in
+              existing analysis roots.
+            </p>
+            <result>
+                <field name="libraries">
+                    <list><ref>FilePath</ref></list>
+                    <p>
+                      A list of the paths of library elements referenced by
+                      files in existing analysis roots.
+                    </p>
+                </field>
+            </result>
+      </request>
       <request method="getNavigation">
         <p>
           Return the navigation information associated with the given region of
