update analysis server spec and regen files this is needed to support new UpdateContentConsumer
BUG=
R=scheglov@google.com

Review URL: https://codereview.chromium.org//868893003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43088 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -631,6 +631,8 @@
             </p>
           </field>
         </params>
+        <result>
+        </result>
       </request>
       <request method="updateOptions">
         <p>
