Library dependencies server API updates (to pass package maps).
R=brianwilkerson@google.com, jwren@google.com, scheglov@google.com

Review URL: https://codereview.chromium.org//874373003

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43193 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -369,19 +369,35 @@
         </result>
       </request>
       <request method="getLibraryDependencies">
-            <p>
-              Return a list of all of the libraries referenced by any files in
-              existing analysis roots.
-            </p>
-            <result>
-                <field name="libraries">
-                    <list><ref>FilePath</ref></list>
-                    <p>
-                      A list of the paths of library elements referenced by
-                      files in existing analysis roots.
-                    </p>
-                </field>
-            </result>
+        <p>
+          Return library dependency information for use in client-side indexing
+          and package URI resolution.
+        </p>
+        <result>
+          <field name="libraries">
+            <list><ref>FilePath</ref></list>
+              <p>
+                A list of the paths of library elements referenced by
+                files in existing analysis roots.
+              </p>
+            </field>
+            <field name="packageMap">
+              <map>
+                <key><ref>String</ref></key>
+                <value>
+                  <map>
+                    <key><ref>String</ref></key>
+                    <value><list><ref>FilePath</ref></list></value>
+                  </map>
+                </value>
+              </map>
+              <p>
+                A mapping from context source roots to package maps which map 
+                package names to source directories for use in client-side 
+                package URI resolution.
+              </p>
+            </field>
+        </result>
       </request>
       <request method="getNavigation">
         <p>
