Issue 22157. Cancel a pending refactoring request on receiving a new one.
R=brianwilkerson@google.com, paulberry@google.com
BUG= https://code.google.com/p/dart/issues/detail?id=22157

Review URL: https://codereview.chromium.org//884453002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43201 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -1453,6 +1453,11 @@
         <p>
           Get the changes required to perform a refactoring.
         </p>
+        <p>
+          If another refactoring request is received during the processing
+          of this one, an error of type <tt>REFACTORING_REQUEST_CANCELLED</tt>
+          will be generated.
+        </p>
         <params>
           <field name="kind">
             <ref>RefactoringKind</ref>
@@ -3058,6 +3063,13 @@
             <code>INVALID_REQUEST</code>
             <p>
               A malformed request was received.
+            </p>
+          </value>
+          <value>
+            <code>REFACTORING_REQUEST_CANCELLED</code>
+            <p>
+              Another refactoring request was received during processing of
+              this one.
             </p>
           </value>
           <value>
