Formatter service API tweaks.
Some way to indicate no selection is required in the case where there is none.  I opted for the -1 convention not becuase I particularly like it but because, well, it's convention! :)

R=brianwilkerson@google.com, scheglov@google.com

Review URL: https://codereview.chromium.org//894863002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43369 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -1301,13 +1301,17 @@
           <field name="selectionOffset">
             <ref>int</ref>
             <p>
-              The offset of the current selection in the file.
+              The offset of the current selection in the file. In case 
+              preserving, selection information is not required, 0 can be
+              specified for both selection offset and length. 
             </p>
           </field>
           <field name="selectionLength">
             <ref>int</ref>
             <p>
-              The length of the current selection in the file.
+              The length of the current selection in the file. In case 
+              preserving, selection information is not required, 0 can be
+              specified for both selection offset and length.
             </p>
           </field>
           <!--
