--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -476,10 +476,10 @@
       </request>
       <request method="setAnalysisRoots">
         <p>
-          Sets the root paths used to determine which files to
-          analyze. The set of files to be analyzed are all of the
-          files in one of the root paths that are not also in one of
-          the excluded paths.
+          Sets the root paths used to determine which files to analyze. The set
+          of files to be analyzed are all of the files in one of the root paths
+          that are not also in one of the excluded paths and do not start with
+          a dot ('.').
         </p>
         <p>
           Note that this request determines the set of requested
@@ -1301,15 +1301,15 @@
           <field name="selectionOffset">
             <ref>int</ref>
             <p>
-              The offset of the current selection in the file. In case 
+              The offset of the current selection in the file. In case
               preserving, selection information is not required, 0 can be
-              specified for both selection offset and length. 
+              specified for both selection offset and length.
             </p>
           </field>
           <field name="selectionLength">
             <ref>int</ref>
             <p>
-              The length of the current selection in the file. In case 
+              The length of the current selection in the file. In case
               preserving, selection information is not required, 0 can be
               specified for both selection offset and length.
             </p>
