Port metrics to RPC
R=turnidge@google.com

Review URL: https://codereview.chromium.org//886353006

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43486 260f80e4-7a28-3924-810f-c04153c831b5

--- a/runtime/observatory/lib/src/elements/metrics.html
+++ b/runtime/observatory/lib/src/elements/metrics.html
@@ -36,7 +36,7 @@
               </li>
             </template>
           </template>
-          <template repeat="{{ metric in isolate.vmMetrics.values }}">
+          <template repeat="{{ metric in isolate.nativeMetrics.values }}">
             <template if="{{ metric == selectedMetric }}">
               <li class="selected">
                 {{ metric.name }}
