Fix ambiguous description
R=paulberry@google.com

Review URL: https://codereview.chromium.org//901063002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge/dart@43493 260f80e4-7a28-3924-810f-c04153c831b5

--- a/pkg/analysis_server/tool/spec/spec_input.html
+++ b/pkg/analysis_server/tool/spec/spec_input.html
@@ -478,8 +478,11 @@
         <p>
           Sets the root paths used to determine which files to analyze. The set
           of files to be analyzed are all of the files in one of the root paths
-          that are not also in one of the excluded paths and do not start with
-          a dot ('.').
+          that are not either explicitly or implicitly excluded. A file is
+          explicitly excluded if it is in one of the excluded paths. A file is
+          implicitly excluded if it is in a subdirectory of one of the root
+          paths where the name of the subdirectory starts with a period (that
+          is, a hidden directory).
         </p>
         <p>
           Note that this request determines the set of requested
